test/conformance/chainsaw/webhook-configurations/match-conditions-fail/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: failing-match-conditions
spec:
  concurrent: false
  steps:
    - name: expect-policy-failure
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: policy.yaml
